# churn-prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: data.yaml  train.yaml  train_hgb.yaml
docs/: deployment.md
docs/decisions/: 0001-tabular-baseline.md  0002-hgb-over-lightgbm.md  0003-cost-matrix.md
models/: churn_v1.joblib  churn_v1.json
notebooks/: 01_eda.ipynb  01_eda.py  03_model_diagnostics.ipynb  03_model_diagnostics.py
reports/: model_card.md
scripts/: build_artifact.py  download_data.py  train.py
src/churn/data/: __init__.py  load.py  schema.py  splits.py
src/churn/explain/: __init__.py  shap_explainer.py
src/churn/features/: __init__.py  build.py  engineer.py
src/churn/models/: __init__.py  bootstrap.py  calibrate.py  evaluate.py  slices.py  threshold.py  train.py  tune.py
src/churn/monitoring/: __init__.py  drift.py
src/churn/serving/: __init__.py  api.py  predictor.py  schemas.py
tests/: conftest.py  test_api.py  test_bootstrap.py  test_calibration.py  test_data.py  test_drift.py  test_engineer.py  test_explain.py  test_features.py  test_models.py  test_slices.py  test_threshold.py
tests/fixtures/: sample_customer.json
