[project]
name = "churn"
version = "0.1.0"
description = "Customer churn prediction with explainable insights"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "optuna>=3.6",
    "shap>=0.46",
    "numba>=0.59",
    "llvmlite>=0.42",
    "pandera>=0.18",
    "mlflow>=2.11",
    "evidently>=0.4",
    "fastapi>=0.110",
    "pydantic>=2.6",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.32",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "jupytext>=1.16",
    "nbconvert>=7.16",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/churn"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "N"]
# N803, N806: sklearn convention uses uppercase X for feature matrices
ignore = ["E501", "N803", "N806"]

[tool.ruff.lint.per-file-ignores]
# Schema field names mirror the upstream dataset's exact column names
"src/churn/data/schema.py" = ["N815"]
"tests/*" = ["N802"]
# Notebook scripts use unicode (×, –) deliberately in prose
"notebooks/*" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=src/churn --cov-report=term-missing"
pythonpath = ["src"]
